name:                lrzip
version:             0.1.0.0
synopsis: Lrzip.h bindings
description: Bytestring-based library handling lrzip
license:             BSD3
license-file:        LICENSE
author:              Vanessa McHale
maintainer:          vamchale@gmail.com
copyright:           Copyright: (c) 2020 Vanessa McHale
category:            Compression, Zip
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
cabal-version:       1.18

library
  hs-source-dirs:      src
  exposed-modules:     Codec.Compression.FileLrzip
                     , Codec.Compression.Lrzip
  pkgconfig-depends:   lrzip
  build-depends:       base >= 4.3 && < 5
                     , bytestring
  build-tool-depends: c2hs:c2hs
  default-language:    Haskell2010
  if impl(ghc >= 8.0)
    ghc-options:       -Wincomplete-uni-patterns -Wincomplete-record-updates -Wredundant-constraints
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
  if impl(ghc >= 8.2)
    ghc-options: -Wcpp-undef
  if impl(ghc >= 8.10)
    ghc-options: -Wunused-packages
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/vmchale/archive-backpack
  subdir: lrzip
