name:                snappy-lazy
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/vmchale/snappy-lazy#readme
license:             BSD3
license-file:        LICENSE
author:              Vanessa McHale
maintainer:          vamchale@gmail.com
copyright:           Copyright: (c) 2020 Vanessa McHale
--category:            Data
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
extra-source-files:  stack.yaml
                   , cabal.project.local
cabal-version:       1.18

Flag development {
  Description: Enable `-Werror`
  manual: True
  default: False
}

library
  hs-source-dirs:      src
  exposed-modules:     Codec.Compression.Snappy.BSL
  build-depends:       base >= 4.3 && < 5
                     , bytestring
                     , binary
                     , snappy
                     , snappy-framing
  default-language:    Haskell2010
  if flag(development)
    ghc-options:       -Werror
  if impl(ghc >= 8.0)
    ghc-options:       -Wincomplete-uni-patterns -Wincomplete-record-updates -Wredundant-constraints -Widentities
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
  ghc-options:         -Wall
