cabal-version:   1.18
name:            snappy-lazy
version:         0.1.0.0
license:         BSD3
license-file:    LICENSE
copyright:       Copyright: (c) 2020 Vanessa McHale
maintainer:      vamchale@gmail.com
author:          Vanessa McHale
synopsis:        Lazy bytestring compression and decompression
description:
    Higher-level wrapper for streaming snappy decompression via ByteString

category:        Codec, Compression
build-type:      Simple
extra-doc-files:
    README.md
    CHANGELOG.md

flag development
    description: Enable `-Werror`
    default:     False
    manual:      True

library
    exposed-modules:  Codec.Compression.Snappy.BSL
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.3 && <5,
        bytestring -any,
        binary -any,
        snappy -any,
        snappy-framing -any

    if flag(development)
        ghc-options: -Werror

    if impl(ghc >=8.0)
        ghc-options:
            -Wincomplete-uni-patterns -Wincomplete-record-updates
            -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists
